Fix sidescroll issue - about us image too large

--- a/public/styles/sections/about-us.css
+++ b/public/styles/sections/about-us.css
@@ -13,6 +13,8 @@
 }
 
 .about-us .intro-img {
+  width: 100%;
+  max-width: 340px;
   position: absolute;
   top: 50%;
   left: 50%;
